--- a/html/signup.html
+++ b/html/signup.html
@@ -92,8 +92,8 @@
         </div>
         <!-- container -->
     </div>
-    <!-- ======================= Sign In  =========================== -->
-    <div class="login_sec section" style="margin:115px 0px;">
+    <!-- ======================= Sign Up  =========================== -->
+    <div class="login_sec section">
         <!-- container -->
         <div class="container">
             <div class="login_wrapper">
@@ -102,7 +102,7 @@
                     <div class="col-11 col-sm-8 col-md-7 col-lg-6 col-xl-4">
                         <div class="login_form">
                             <div class="login_title mb-4 text-center">
-                                <h3>Sign In</h3>
+                                <h3>Sign Up</h3>
                             </div>
                             <form action="#" method="post">
 
@@ -117,19 +117,27 @@
                                 </div>
 
                                 <div class="mb-3">
-                                    <label for="username" class="form-label">Username or Email Address</label>
-                                    <input type="text" name="username" id="username" class="form-control" tabindex="1" placeholder="Username or Email address" required>
+                                    <label for="full_name" class="form-label">Full Name</label>
+                                    <input type="text" name="full_name" id="full_name" class="form-control" tabindex="1" placeholder="Full Name" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email Address</label>
+                                    <input type="email" name="email" id="email" class="form-control" tabindex="2" placeholder=" Email address" required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="password" class="form-label">Password</label>
-                                    <input type="password" name="password" id="password" class="form-control" tabindex="2" placeholder="Password" required>
+                                    <input type="password" name="password" id="password" class="form-control" tabindex="3" placeholder="Password" required>
                                 </div>
                                 <div class="mb-3">
-                                    <button type="submit" class="btn btn-primary">Sign In</button>
+                                    <label for="password_confirm" class="form-label">Confirm Password</label>
+                                    <input type="password" name="password_confirm" id="password_confirm" class="form-control" tabindex="4" placeholder="Confirm Password" required>
+                                </div>
+                                <div class="mb-3">
+                                    <button type="submit" class="btn btn-primary">Sign Up</button>
                                 </div>
 
                                 <div class="bottom text-center">
-                                    <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+                                    <p>Already have an account? <a href="signin.html">Sign In</a></p>
                                 </div>
 
                             </form>
