--- a/html/user/dashboard.html
+++ b/html/user/dashboard.html
@@ -32,12 +32,9 @@
                 <nav class="mt-4">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="dashboard.html" class="nav-link">
+                            <a href="dashboard.html" class="nav-link active">
                                 <span class="icon">
-                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M7.9987 7.33333C9.47146 7.33333 10.6654 6.13943 10.6654 4.66667C10.6654 3.19391 9.47146 2 7.9987 2C6.52594 2 5.33203 3.19391 5.33203 4.66667C5.33203 6.13943 6.52594 7.33333 7.9987 7.33333Z" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
-                                        <path d="M4 14V12.6667C4 11.9594 4.28095 11.2811 4.78105 10.781C5.28115 10.281 5.95942 10 6.66667 10H9.33333C10.0406 10 10.7189 10.281 11.219 10.781C11.719 11.2811 12 11.9594 12 12.6667V14" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
-                                    </svg>
+                                    <img src="../assets/user/images/icon/user.svg" alt="icon">
                                 </span>
                                 My Cards
                             </a>
@@ -45,65 +42,48 @@
                         <li class="nav-item">
                             <a href="dashboard.html" class="nav-link">
                                 <span class="icon">
-                                    <svg width="16" height="16" fill="none" viewBox="0 0 16 15"><rect x="1.5" y="3.58136" width="13" height="10.0437" rx="2" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></rect><path fill-rule="evenodd" clip-rule="evenodd" d="M12.9511 1.72704H2.58203V1.375C2.58203 0.822715 3.02975 0.375 3.58203 0.375H11.9511C12.5034 0.375 12.9511 0.822715 12.9511 1.375V1.72704Z" fill="#BDBDBD"></path><path d="M8.00223 9.10522C8.77149 9.10522 9.39509 8.43071 9.39509 7.59866C9.39509 6.76661 8.77149 6.0921 8.00223 6.0921C7.23298 6.0921 6.60938 6.76661 6.60938 7.59866C6.60938 8.43071 7.23298 9.10522 8.00223 9.10522Z" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path><path d="M4.98438 13.6251C4.98438 12.1988 6.1425 11.1142 7.57111 11.1142H8.43335C9.86197 11.1142 11.0201 12.1988 11.0201 13.6251" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                </span>
-                                Connections
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="dashboard.html" class="nav-link">
-                                <span class="icon">
-                                   <svg width="16" height="16" fill="none"><path d="M8 8V8.00667" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path><path d="M10.1211 5.87939C10.6834 6.44192 10.9994 7.20476 10.9994 8.00016C10.9994 8.79557 10.6834 9.55841 10.1211 10.1209" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12.2422 3.75781C12.7993 4.31491 13.2412 4.97628 13.5428 5.70418C13.8443 6.43207 13.9995 7.21223 13.9995 8.0001C13.9995 8.78797 13.8443 9.56813 13.5428 10.296C13.2412 11.0239 12.7993 11.6853 12.2422 12.2424" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path><path d="M5.87436 10.1209C5.31201 9.55841 4.99609 8.79557 4.99609 8.00016C4.99609 7.20476 5.31201 6.44192 5.87436 5.87939" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path><path d="M3.75337 12.2424C3.19625 11.6853 2.75431 11.0239 2.4528 10.296C2.15128 9.56813 1.99609 8.78797 1.99609 8.0001C1.99609 7.21223 2.15128 6.43207 2.4528 5.70418C2.75431 4.97628 3.19625 4.31491 3.75337 3.75781" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-                                </span>
-                                Devices
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="dashboard.html" class="nav-link">
-                                <span class="icon">
-                                    <svg width="16" height="16" fill="none" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M3.7548 10H2.2452C1.83364 10 1.5 10.3298 1.5 10.7367V13.2633C1.5 13.6702 1.83364 14 2.2452 14H3.7548C4.16636 14 4.5 13.6702 4.5 13.2633V10.7367C4.5 10.3298 4.16636 10 3.7548 10Z" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path><path d="M8.7548 6H7.2452C6.83364 6 6.5 6.32982 6.5 6.73667V13.2633C6.5 13.6702 6.83364 14 7.2452 14H8.7548C9.16636 14 9.5 13.6702 9.5 13.2633V6.73667C9.5 6.32982 9.16636 6 8.7548 6Z" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path><path d="M13.7548 2H12.2452C11.8336 2 11.5 2.32982 11.5 2.73667V13.2633C11.5 13.6702 11.8336 14 12.2452 14H13.7548C14.1664 14 14.5 13.6702 14.5 13.2633V2.73667C14.5 2.32982 14.1664 2 13.7548 2Z" stroke="#BDBDBD" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                                    <img src="../assets/user/images/icon/insights.svg" alt="icon">
                                 </span>
                                 Insights
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="dashboard.html" class="nav-link">
+                            <a href="setting.html" class="nav-link">
                                 <span class="icon">
-                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M8.60417 3.5975C8.95917 2.13417 11.0408 2.13417 11.3958 3.5975C11.4491 3.81733 11.5535 4.02148 11.7006 4.19333C11.8477
-                                        4.36518 12.0332 4.49988 12.2422 4.58645C12.4512 4.67303 12.6776 4.70904 12.9032 4.69156C13.1287 4.67407 13.3469 4.60359 13.54
-                                        4.48583C14.8258 3.7025 16.2983 5.17417 15.515 6.46083C15.3974 6.65388 15.327 6.87195 15.3096 7.09731C15.2922 7.32267 15.3281 7.54897
-                                        15.4146 7.75782C15.5011 7.96666 15.6356 8.15215 15.8073 8.29921C15.9789 8.44627 16.1829 8.55075 16.4025 8.60417C17.8658 8.95917 17.8658
-                                        11.0408 16.4025 11.3958C16.1827 11.4491 15.9785 11.5535 15.8067 11.7006C15.6348 11.8477 15.5001 12.0332 15.4135 12.2422C15.327 12.4512
-                                        15.291 12.6776 15.3084 12.9032C15.3259 13.1287 15.3964 13.3469 15.5142 13.54C16.2975 14.8258 14.8258 16.2983 13.5392 15.515C13.3461 15.3974
-                                        13.1281 15.327 12.9027 15.3096C12.6773 15.2922 12.451 15.3281 12.2422 15.4146C12.0333 15.5011 11.8479 15.6356 11.7008 15.8073C11.5537 15.9789
-                                        11.4492 16.1829 11.3958 16.4025C11.0408 17.8658 8.95917 17.8658 8.60417 16.4025C8.5509 16.1827 8.44648 15.9785 8.29941 15.8067C8.15233 15.6348
-                                        7.96676 15.5001 7.75779 15.4135C7.54882 15.327 7.32236 15.291 7.09685 15.3084C6.87133 15.3259 6.65313 15.3964 6.46 15.5142C5.17417 16.2975 3.70167
-                                        14.8258 4.485 13.5392C4.60258 13.3461 4.67296 13.1281 4.6904 12.9027C4.70785 12.6773 4.67187 12.451 4.58539 12.2422C4.49892 12.0333 4.36438 11.8479
-                                        4.19273 11.7008C4.02107 11.5537 3.81714 11.4492 3.5975 11.3958C2.13417 11.0408 2.13417 8.95917 3.5975 8.60417C3.81733 8.5509 4.02148 8.44648
-                                        4.19333 8.29941C4.36518 8.15233 4.49988 7.96676 4.58645 7.75779C4.67303 7.54882 4.70904 7.32236 4.69156 7.09685C4.67407 6.87133 4.60359 6.65313
-                                        4.48583 6.46C3.7025 5.17417 5.17417 3.70167 6.46083 4.485C7.29417 4.99167 8.37417 4.54333 8.60417
-                                        3.5975Z" stroke="#BDBDBD" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                        <path d="M10 12.5C11.3807 12.5 12.5 11.3807 12.5 10C12.5 8.61929 11.3807 7.5 10 7.5C8.61929 7.5 7.5 8.61929 7.5 10C7.5 11.3807 8.61929
-                                        12.5 10 12.5Z" stroke="#BDBDBD" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                    </svg>
+                                     <img src="../assets/user/images/icon/settings.svg" alt="icon">
                                 </span>
                                 Settings
                             </a>
                         </li>
-
-                       
                     </ul>
                 </nav>
+
+                <!-- user profile -->
+                <div class="user-panel align-items-center mt-3 pb-3 mb-3 d-flex">
+                    <div class="image">
+                        <a href="#">
+                            <img src="../assets/user/images/user.jpg" class="img-circle elevation-2" alt="User Image">
+                        </a>
+                    </div>
+                    <div class="info">
+                        <a href="#" class="d-block">Rabin</a>
+                        <span>User</span>
+                    </div>
+                </div>
+                <!-- upgrade plan -->
+                <div class="plan_upgrade text-center mb-5">
+                    <a href="#">Upgrade now</a>
+                </div>
             </div>
         </aside>
+
         <!-- main content -->
         <div class="content-wrapper">
             <div class="content-header">
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">My Cards</h1>
+                            <h1 class="m-0">My Cards <a class="create_plus_icon" href="card-create.html"><i class="fab fa-plus"></i></a></h1>
                         </div>
                     </div>
                 </div>
@@ -111,21 +91,53 @@
             <div class="content">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-6 col-lg-4">
-                            <div class="dashboard_card">
-                                <div class="card_body">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, cumque iste quam, ea deserunt id odio, modi impedit earum quasi mollitia, animi harum eligendi ad quis ratione et optio eos.</p>
+                        <div class="col-md-6 col-xl-4">
+                            <!-- user card -->
+                             <a href="edit-card.html">
+                                <div class="dashboard_card user_card" style="background-color: #E8F4ED;">
+                                    <div class="card_body">
+                                        <div class="card_cover_bg">
+                                            <!-- cover image -->
+                                            <div class="cover_photo">
+                                                <img src="../assets/user/images/cover.png" class="img-fluid" alt="image">
+                                            </div>
+                                            <div class="user_card_profile text-center">
+                                                <div class="profile_image">
+                                                    <!-- profile image -->
+                                                    <div class="profile_photo">
+                                                        <img src="../assets/user/images/user.jpg" class="img-fluid" alt="image">
+                                                    </div>
+                                                    <!-- logo -->
+                                                    <div class="logo">
+                                                        <img src="../assets/user/images/card-logo.png" alt="image">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- user card info -->
+                                        <div class="card_info mt-4 text-center">
+                                            <div class="profile_name">
+                                                <h3>Rabin Mia</h3>
+                                                <h5>Developer at Arobil</h5>
+                                            </div>
+                                            <div class="card_btn mt-3 mb-4"> 
+                                                <button class="btn-sm btn-secondary">Edit Card</button>
+                                                <button class="btn-sm btn-secondary"><i class="fa fa-check"></i> Live</button>
+                                            </div>
+                                        </div>  
+                                    </div>
                                 </div>
-                            </div>
+                             </a>
                         </div>
-                        <div class="col-md-6 col-lg-4">
-                             <a href="card-create.html">
+                        <div class="col-md-6 col-xl-4">
+                            <!-- create new card -->
+                            <a href="card-create.html">
                                 <div class="dashboard_card text-center">
                                     <div class="card_body">
-                                          <span class="plus_icon">
-                                              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="bevel"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
-                                          </span>
-                                         <p>Create New Card</p>
+                                        <span class="plus_icon">
+                                            <img src="../assets/user/images/icon/plus.svg" alt="icon">
+                                        </span>
+                                        <p>Create New Card</p>
                                     </div>
                                 </div>
                             </a>
@@ -135,6 +147,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="../assets/user/js/jquery.min.js"></script>
     <script src="../assets/user/js/bootstrap.min.js"></script>
