--- a/html/user/insights.html
+++ b/html/user/insights.html
@@ -32,7 +32,7 @@
                 <nav class="mt-4">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <li class="nav-item">
-                            <a href="dashboard.html" class="nav-link active">
+                            <a href="dashboard.html" class="nav-link">
                                 <span class="icon">
                                     <img src="../assets/user/images/icon/user.svg" alt="icon">
                                 </span>
@@ -40,7 +40,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="insights.html" class="nav-link">
+                            <a href="insights.html" class="nav-link active">
                                 <span class="icon">
                                     <img src="../assets/user/images/icon/insights.svg" alt="icon">
                                 </span>
@@ -50,14 +50,13 @@
                         <li class="nav-item">
                             <a href="setting.html" class="nav-link">
                                 <span class="icon">
-                                     <img src="../assets/user/images/icon/settings.svg" alt="icon">
+                                    <img src="../assets/user/images/icon/settings.svg" alt="icon">
                                 </span>
                                 Settings
                             </a>
                         </li>
                     </ul>
                 </nav>
-
                 <!-- user profile -->
                 <div class="user-panel align-items-center mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
@@ -76,14 +75,13 @@
                 </div>
             </div>
         </aside>
-
         <!-- main content -->
         <div class="content-wrapper">
             <div class="content-header">
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">My Cards <a class="create_plus_icon" href="card-create.html"><i class="fab fa-plus"></i></a></h1>
+                            <h1 class="m-0">Instghts</h1>
                         </div>
                     </div>
                 </div>
@@ -91,64 +89,44 @@
             <div class="content">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-md-6 col-xl-4">
-                            <!-- user card -->
-                             <a href="edit-card.html">
-                                <div class="dashboard_card user_card" style="background-color: #E8F4ED;">
-                                    <div class="card_body">
-                                        <div class="card_cover_bg">
-                                            <!-- cover image -->
-                                            <div class="cover_photo">
-                                                <img src="../assets/user/images/cover.png" class="img-fluid" alt="image">
-                                            </div>
-                                            <div class="user_card_profile text-center">
-                                                <div class="profile_image">
-                                                    <!-- profile image -->
-                                                    <div class="profile_photo">
-                                                        <img src="../assets/user/images/user2.jpg" class="img-fluid" alt="image">
-                                                    </div>
-                                                    <!-- logo -->
-                                                    <div class="logo">
-                                                        <img src="../assets/user/images/card-logo.png" alt="image">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- user card info -->
-                                        <div class="card_info mt-4 text-center">
-                                            <div class="profile_name">
-                                                <h3>Rabin Mia</h3>
-                                                <h5>Developer at Arobil</h5>
-                                            </div>
-                                            <div class="card_btn mt-3 mb-4"> 
-                                                <button class="btn-sm btn-secondary">Edit Card</button>
-                                                <button class="btn-sm btn-secondary"><i class="fa fa-check"></i> Live</button>
-                                            </div>
-                                        </div>  
-                                    </div>
+                        <div class="col-sm-6 col-lg-4 col-xl-3">
+                            <div class="small-box bg-success">
+                                <div class="inner">
+                                    <h3>10</h3>
+                                    <p>Total Cards</p>
                                 </div>
-                             </a>
+                                <div class="icon">
+                                    <i class="ion ion-bag"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-6 col-xl-4">
-                            <!-- create new card -->
-                            <a href="card-create.html">
-                                <div class="dashboard_card text-center">
-                                    <div class="card_body">
-                                        <span class="plus_icon">
-                                            <img src="../assets/user/images/icon/plus.svg" alt="icon">
-                                        </span>
-                                        <p>Create New Card</p>
-                                    </div>
+                        <div class="col-sm-6 col-lg-4 col-xl-3">
+                            <div class="small-box bg-primary">
+                                <div class="inner">
+                                    <h3>05</h3>
+                                    <p>Total Card Share</p>
                                 </div>
-                            </a>
+                                <div class="icon">
+                                    <i class="ion ion-stats-bars"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4 col-xl-3">
+                            <div class="small-box bg-info">
+                                <div class="inner">
+                                    <h3>Free</h3>
+                                    <p>Current Plan</p>
+                                </div>
+                                <div class="icon">
+                                    <i class="ion ion-bag"></i>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
     <script src="../assets/user/js/jquery.min.js"></script>
     <script src="../assets/user/js/bootstrap.min.js"></script>
     <script src="../assets/user/js/adminlte.min.js"></script>
