--- a/html/user/setting.html
+++ b/html/user/setting.html
@@ -32,7 +32,7 @@
                 <nav class="mt-4">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                          <li class="nav-item">
-                            <a href="dashboard.html" class="nav-link active">
+                            <a href="dashboard.html" class="nav-link">
                                 <span class="icon">
                                     <img src="../assets/user/images/icon/user.svg" alt="icon">
                                 </span>
@@ -40,7 +40,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="dashboard.html" class="nav-link">
+                            <a href="insights.html" class="nav-link">
                                 <span class="icon">
                                     <img src="../assets/user/images/icon/insights.svg" alt="icon">
                                 </span>
@@ -48,7 +48,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="setting.html" class="nav-link">
+                            <a href="setting.html" class="nav-link active">
                                 <span class="icon">
                                      <img src="../assets/user/images/icon/settings.svg" alt="icon">
                                 </span>
