--- a/html/user/card-create.html
+++ b/html/user/card-create.html
@@ -296,29 +296,38 @@
                                                                              <img src="../assets/user/images/icon/color.svg" alt="svg">
                                                                              <input type="color" name="color" id="color">
                                                                          </label>
+                                                                         <!-- color -->
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorOne" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color1">
+                                                                            <label for="color1" class="btn-colorOne"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorTwo" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color2">
+                                                                            <label for="color2" class="btn-colorTwo"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorThree" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color3">
+                                                                            <label for="color3" class="btn-colorThree"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorFour" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color4">
+                                                                            <label for="color4" class="btn-colorFour"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorFive" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color5">
+                                                                            <label for="color5" class="btn-colorFive"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorSix" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color6">
+                                                                            <label for="color6" class="btn-colorSix"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorSeven" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color7">
+                                                                            <label for="color7" class="btn-colorSeven"></label>
                                                                         </div>
                                                                         <div class="form-check">
-                                                                            <input class="form-check-input btn btn-colorEight" type="radio" name="bgcolor">
+                                                                            <input class="form-check-input" type="radio" name="bgcolor" id="color8">
+                                                                            <label for="color8" class="btn-colorEight"></label>
                                                                         </div>
                                                                     </div>
                                                                  </div>
@@ -415,6 +424,7 @@
                                                     <div class="profile_name mt-2">
                                                         <h3>Rabin Mia</h3>
                                                         <h5>Developer at Arobil</h5>
+                                                        <h6>Dhaka</h6>
                                                         <p>Lorem ipsum, dolor sit, amet consectetur adipisicing elit.</p>
                                                     </div>
                                                     <div class="save_contact mt-4 mb-4">
@@ -825,6 +835,7 @@
                                                             <div class="profile_name mt-2">
                                                                 <h3>Rabin Mia</h3>
                                                                 <h5>Developer at Arobil</h5>
+                                                                <h6>Dhaka</h6>
                                                                 <p>Lorem ipsum, dolor sit, amet consectetur adipisicing elit.</p>
                                                             </div>
                                                             <div class="save_contact mt-4 mb-4">
